// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationsListPaging renders  component renders as empty due to currentpage set outside range 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with ellipsis paging results 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon)) />
        Previous
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        flex={true}
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 1 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-1"
          disabled={false}
          id="undefined-select-page-1"
          key="1"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          1
        </WithStyles(ForwardRef(Button))>
        ...
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 7 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-7"
          disabled={false}
          id="undefined-select-page-7"
          key="7"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          7
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 8 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-8"
          disabled={false}
          id="undefined-select-page-8"
          key="8"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          8
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 9 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-9"
          disabled={false}
          id="undefined-select-page-9"
          key="9"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          9
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 10 of 50 result pages"
          className=" paging-button"
          color="primary"
          data-testid="undefined-select-page-10"
          disabled={false}
          id="undefined-select-page-10"
          key="10"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          10
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 11 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-11"
          disabled={false}
          id="undefined-select-page-11"
          key="11"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          11
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 12 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-12"
          disabled={false}
          id="undefined-select-page-12"
          key="12"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          12
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 13 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-13"
          disabled={false}
          id="undefined-select-page-13"
          key="13"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          13
        </WithStyles(ForwardRef(Button))>
        ...
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 50 of 50 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-50"
          disabled={false}
          id="undefined-select-page-50"
          key="50"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          50
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      smUp={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          variant="text"
        >
          Page 10 of 50
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <WithStyles(ForwardRef(Grid))
      flex={true}
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon)) />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`PublicationsListPaging renders  component with empty paging data 1`] = `
<span
  className="publicationsListControls empty"
/>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, first page 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-previous"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon)) />
        Previous
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        flex={true}
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 1 of 3 result pages"
          className=" paging-button"
          color="primary"
          data-testid="undefined-select-page-1"
          disabled={false}
          id="undefined-select-page-1"
          key="1"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          1
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 2 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-2"
          disabled={false}
          id="undefined-select-page-2"
          key="2"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          2
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 3 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-3"
          disabled={false}
          id="undefined-select-page-3"
          key="3"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      smUp={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          variant="text"
        >
          Page 1 of 3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <WithStyles(ForwardRef(Grid))
      flex={true}
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon)) />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, last page 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon)) />
        Previous
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        flex={true}
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 1 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-1"
          disabled={false}
          id="undefined-select-page-1"
          key="1"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          1
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 2 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-2"
          disabled={false}
          id="undefined-select-page-2"
          key="2"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          2
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 3 of 3 result pages"
          className=" paging-button"
          color="primary"
          data-testid="undefined-select-page-3"
          disabled={false}
          id="undefined-select-page-3"
          key="3"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      smUp={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          variant="text"
        >
          Page 3 of 3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <WithStyles(ForwardRef(Grid))
      flex={true}
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-next"
        disabled={true}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon)) />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`PublicationsListPaging renders  component with non-empty paging data, second page 1`] = `
<div>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-previous"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        <Memo(ForwardRef(ChevronLeftIcon)) />
        Previous
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      xsDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        flex={true}
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 1 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-1"
          disabled={false}
          id="undefined-select-page-1"
          key="1"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          1
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 2 of 3 result pages"
          className=" paging-button"
          color="primary"
          data-testid="undefined-select-page-2"
          disabled={false}
          id="undefined-select-page-2"
          key="2"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          2
        </WithStyles(ForwardRef(Button))>
        <WithStyles(ForwardRef(Button))
          aria-label="Click to select page 3 of 3 result pages"
          className=" paging-button"
          color="default"
          data-testid="undefined-select-page-3"
          disabled={false}
          id="undefined-select-page-3"
          key="3"
          onClick={[Function]}
          size="small"
          variant="text"
        >
          3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <Hidden
      smUp={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Button))
          variant="text"
        >
          Page 2 of 3
        </WithStyles(ForwardRef(Button))>
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
    <WithStyles(ForwardRef(Grid))
      flex={true}
      item={true}
    >
      <WithStyles(ForwardRef(Button))
        className="undefined paging-next"
        disabled={false}
        onClick={[Function]}
        variant="text"
      >
        Next
        <Memo(ForwardRef(ChevronRightIcon)) />
      </WithStyles(ForwardRef(Button))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`PublicationsListPaging renders  component with styles 1`] = `
<PublicationsListPaging
  classes={
    Object {
      "current": "PublicationsListPaging-current-2",
      "fakeDisabled": "PublicationsListPaging-fakeDisabled-5",
      "gridContainer": "PublicationsListPaging-gridContainer-6",
      "gridItem": "PublicationsListPaging-gridItem-7",
      "nextPrevButtons": "PublicationsListPaging-nextPrevButtons-3",
      "nextPrevIcons": "PublicationsListPaging-nextPrevIcons-4",
      "pageButton": "PublicationsListPaging-pageButton-1",
    }
  }
  disabled={false}
  onPageChanged={[MockFunction]}
  pagingData={
    Object {
      "current_page": 1,
      "from": 0,
      "per_page": 20,
      "to": 0,
      "total": 0,
    }
  }
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
        "width": [Function],
      },
      "direction": "ltr",
      "mixins": Object {
        "gutters": [Function],
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "overrides": Object {},
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fafafa",
          "paper": "#fff",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#d32f2f",
          "light": "#e57373",
          "main": "#f44336",
        },
        "getContrastText": [Function],
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#d5d5d5",
          "A200": "#aaaaaa",
          "A400": "#303030",
          "A700": "#616161",
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#1976d2",
          "light": "#64b5f6",
          "main": "#2196f3",
        },
        "primary": Object {
          "contrastText": "#fff",
          "dark": "#303f9f",
          "light": "#7986cb",
          "main": "#3f51b5",
        },
        "secondary": Object {
          "contrastText": "#fff",
          "dark": "#c51162",
          "light": "#ff4081",
          "main": "#f50057",
        },
        "success": Object {
          "contrastText": "rgba(0, 0, 0, 0.87)",
          "dark": "#388e3c",
          "light": "#81c784",
          "main": "#4caf50",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "hint": "rgba(0, 0, 0, 0.38)",
          "primary": "rgba(0, 0, 0, 0.87)",
          "secondary": "rgba(0, 0, 0, 0.54)",
        },
        "tonalOffset": 0.2,
        "type": "light",
        "warning": Object {
          "contrastText": "rgba(0, 0, 0, 0.87)",
          "dark": "#f57c00",
          "light": "#ffb74d",
          "main": "#ff9800",
        },
      },
      "props": Object {},
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.5,
        },
        "body2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 400,
          "letterSpacing": "0.01071em",
          "lineHeight": 1.43,
        },
        "button": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.02857em",
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "caption": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.03333em",
          "lineHeight": 1.66,
        },
        "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "6rem",
          "fontWeight": 300,
          "letterSpacing": "-0.01562em",
          "lineHeight": 1.167,
        },
        "h2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3.75rem",
          "fontWeight": 300,
          "letterSpacing": "-0.00833em",
          "lineHeight": 1.2,
        },
        "h3": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "3rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.167,
        },
        "h4": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "2.125rem",
          "fontWeight": 400,
          "letterSpacing": "0.00735em",
          "lineHeight": 1.235,
        },
        "h5": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.5rem",
          "fontWeight": 400,
          "letterSpacing": "0em",
          "lineHeight": 1.334,
        },
        "h6": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 500,
          "letterSpacing": "0.0075em",
          "lineHeight": 1.6,
        },
        "htmlFontSize": 16,
        "overline": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.75rem",
          "fontWeight": 400,
          "letterSpacing": "0.08333em",
          "lineHeight": 2.66,
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "round": [Function],
        "subtitle1": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
          "letterSpacing": "0.00938em",
          "lineHeight": 1.75,
        },
        "subtitle2": Object {
          "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
          "fontSize": "0.875rem",
          "fontWeight": 500,
          "letterSpacing": "0.00714em",
          "lineHeight": 1.57,
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
/>
`;

exports[`PublicationsListPaging renders  should render buttons with zero total pages 1`] = `
<WithStyles(ForwardRef(Button))
  aria-label="Click to select page test of 0 result pages"
  className=" paging-button"
  color="default"
  data-testid="undefined-select-page-test"
  disabled={false}
  id="undefined-select-page-test"
  onClick={[Function]}
  size="small"
  variant="text"
>
  test
</WithStyles(ForwardRef(Button))>
`;
